fix: weekday bar is not aligned

--- a/day2025-date-picker/less/styles.less
+++ b/day2025-date-picker/less/styles.less
@@ -151,7 +151,6 @@ main {
 .calendar {
   &--weekday-bar {
     position: absolute;
-    right: 0;
     left: 0;
     top: 0;
     z-index: 10;
